# sql-filler

./: README.md  pyproject.toml  tasks.py
Documentation/: classes_and_signals.md  data_formats.md  inserttab.md  main_view_layout.txt  making_queries.md  prepared_statements.md  sequences.md  sketching.md  table_names.md  tkinter_events.md  tkinter_styles.md
sql_filler/: db_connection.py  db_module.py  main.py
sql_filler/UI/: accountFrame.py  mainFrame.py  tableFrame.py  ui.py  utils.py
sql_filler/services/: data_service.py  postgresservice.py
sql_filler/ui/: accountFrame.py  accountTab.py  insertTab.py  mainFrame.py  statementTab.py  tableFrame.py  ui.py  utils.py  workFrame.py
